--- a/frontend/src/app/core/components/header/header.component.html
+++ b/frontend/src/app/core/components/header/header.component.html
@@ -1,1 +1,41 @@
-<p>header works!</p>
+<!-- Navbar -->
+<nav class="main-header navbar navbar-expand navbar-white navbar-light">
+  <!-- Left navbar links -->
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
+    </li>
+  </ul>
+
+  <!-- Right navbar links -->
+  <ul class="navbar-nav ml-auto">
+    <li class="nav-item dropdown user-menu">
+      <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+        <i class="far fa-user-circle" style="font-size: 25px;"></i>
+        <i class="fas fa-chevron-down ml-2" style="font-size: 19px;"></i>
+      </a>
+      <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right" style="left: inherit; right: 0px;">
+        <div class="dropdown-divider"></div>
+        <ul class="p-0 user-item">
+          <li class="dropdown-item user-info">
+            <div class="row mt-2 mb-2">
+              <div class="col-md-2 avatar">
+                <i class="far fa-user-circle" style="font-size: 40px; color: #9B0A23;"></i>
+              </div>
+              <div class="col-md-10 info">
+                <div class="font-weight-bold"> fullName </div>
+                <div class="text-small"> email </div>
+              </div>
+            </div>
+          </li>
+          <div class="dropdown-divider"></div>
+          <li class="dropdown-item text-red pointer" (click)="logOut()">
+            <i class="fas fa-sign-out-alt mr-2"></i>
+            Logout
+          </li>
+        </ul>
+      </div>
+    </li>
+  </ul>
+</nav>
+<!-- /.navbar -->
