--- a/frontend/src/app/not-found/not-found.component.html
+++ b/frontend/src/app/not-found/not-found.component.html
@@ -1,1 +1,19 @@
-<p>not-found works!</p>
+<section class="content">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="card-body">
+          <div class="tab-content p-0 not-found text-center text-red">
+            <img src="assets/images/not-allow.png">
+            <p>
+              Page not found or you are not allow to access this page
+            </p>
+            <small>
+              <a [routerLink]="'/home'" style="text-decoration: underline;"> Go To Home Page </a>
+            </small>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
