--- a/frontend/src/app/page/home/home.component.html
+++ b/frontend/src/app/page/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<app-breadcrumb [data]="breadcrumbObj"></app-breadcrumb>
+<section class="content">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-12">
+        <p>home works!</p>
+      </div>
+    </div>
+  </div>
+</section>
