--- a/frontend/src/app/core/components/rightsidebar/rightsidebar.component.html
+++ b/frontend/src/app/core/components/rightsidebar/rightsidebar.component.html
@@ -1,7 +1,7 @@
 <!-- Main Sidebar Container -->
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
   <!-- Brand Logo -->
-  <a routerLink="/dashboard" class="brand-link text-center">
+  <a routerLink="/home" class="brand-link text-center">
     <img class="brand-text" src="" alt="logo" style="height: 25px; width: auto;">
     <!-- <span class="brand-text font-weight-light">MEPLE</span> -->
   </a>
