--- a/frontend/src/app/core/components/header/header.component.html
+++ b/frontend/src/app/core/components/header/header.component.html
@@ -15,7 +15,7 @@
         <i class="fas fa-chevron-down ml-2" style="font-size: 19px;"></i>
       </a>
       <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right" style="left: inherit; right: 0px;">
-        <div class="dropdown-divider"></div>
+        <!-- <div class="dropdown-divider"></div> -->
         <ul class="p-0 user-item">
           <li class="dropdown-item user-info">
             <div class="row mt-2 mb-2">
