--- a/frontend/src/app/core/components/footer/footer.component.html
+++ b/frontend/src/app/core/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="main-footer text-sm">
+<footer class="main-footer">
   <strong>Copyright &copy; 2014-2019 <a href="http://adminlte.io">AdminLTE.io</a>.</strong>
   All rights reserved.
   <div class="float-right d-none d-sm-inline-block">
