Update auth service and bind account info to header when update user

--- a/frontend/src/app/core/components/header/header.component.html
+++ b/frontend/src/app/core/components/header/header.component.html
@@ -23,8 +23,8 @@
                 <i class="far fa-user-circle" style="font-size: 40px; color: #9B0A23;"></i>
               </div>
               <div class="col-md-10 info">
-                <div class="font-weight-bold"> fullName </div>
-                <div class="text-small"> email </div>
+                <div class="font-weight-bold"> {{account?.name}} </div>
+                <div class="text-small"> {{account?.email}} </div>
               </div>
             </div>
           </li>
